use intermediary mappings on prod (maybe?)